RouteLogic-v4.0.0/force-app/main/default/objects/AI_Key_Version__c/AI_Key_Version__c.object-meta.xml
<CustomObject>
    <label>AI Key Version</label>
    <nameField>
        <displayFormat>KEYVER-{0000000}</displayFormat>
        <label>Key Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Key Versions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>