RouteLogic-v4.0.0/force-app/main/default/objects/AI_Key_Version__c/fields/Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Algorithm__c</fullName>
    <label>Algorithm</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>