RouteLogic-v4.0.0/force-app/main/default/objects/AI_Key_Version__c/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <label>Checksum</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>