RouteLogic-v4.0.0/force-app/main/default/objects/AI_Key_Version__c/fields/Compromise_Date__c.field-meta.xml
<CustomField>
    <fullName>Compromise_Date__c</fullName>
    <label>Compromise Date</label>
    <type>DateTime</type>
</CustomField>