RouteLogic-v4.0.0/force-app/main/default/objects/AI_Key_Version__c/fields/Compromise_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compromise_Reason__c</fullName>
    <label>Compromise Reason</label>
    <type>TextArea</type>
</CustomField>