RouteLogic-v4.0.0/force-app/main/default/objects/AI_Key_Version__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Created Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>