RouteLogic-v4.0.0/force-app/main/default/objects/AI_Key_Version__c/fields/Encrypted_Key__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Key__c</fullName>
    <label>Encrypted Key</label>
    <length>32768</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>