RouteLogic-v4.0.0/force-app/main/default/objects/AI_Key_Version__c/fields/Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Key_Id__c</fullName>
    <label>Key Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>