RouteLogic-v4.0.0/force-app/main/default/objects/AI_Key_Version__c/fields/Key_Size__c.field-meta.xml
<CustomField>
    <fullName>Key_Size__c</fullName>
    <label>Key Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>