RouteLogic-v4.0.0/force-app/main/default/objects/AI_Key_Version__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>ARCHIVED</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
            <value>
                <fullName>COMPROMISED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>